shitty wgpu driver

--- a/examples/assets/page.html
+++ b/examples/assets/page.html
@@ -25,6 +25,10 @@
             align-items: center;
         }
 
+        div:hover {
+            background: linear-gradient(45deg, #ff61ab, #da37e9, #ff8686);
+        }
+
         h1 {
             padding: 1em;
             font-size: 24px;
@@ -35,6 +39,7 @@
 
 <body>
     <div>
+        <button>test</button>
         <h1>Hello Ultralight!</h1>
     </div>
 </body>
